<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">


    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:hint="@string/etEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        style="@style/viewCustom"
        android:ems="10"
        android:hint="@string/etPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        style="@style/viewCustom"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_title"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/viewCustom"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="Forgot Password?"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_register_account"
        style="@style/viewCustom"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/create_act"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</LinearLayout>